# my-nano-vllm-ascend

./: .gitignore  README.md  pyproject.toml
bench/: bench_multimodal.py  serving_bench.py
csrc/ascend_c/add_rms_norm_bias/: CMakeLists.txt  README.md  add_rms_norm_bias_op.json  add_rms_norm_bias_true_npu.cpp  build_add_rms_norm_bias.py  compile_kernel.json
csrc/ascend_c/add_rms_norm_bias/op_host/: add_rms_norm_bias_def.cpp  add_rms_norm_bias_infershape.cpp  add_rms_norm_bias_tiling.cpp  add_rms_norm_bias_tiling.h
csrc/ascend_c/add_rms_norm_bias/op_kernel/: add_rms_norm_bias.cpp  add_rms_norm_bias.h  rms_norm_base.h
csrc/ascend_c/moe_gating_top_k_softmax/: README.md  build_moe_gating_top_k_softmax.py  compile_kernel.json  moe_gating_top_k_softmax_true_npu.cpp
csrc/ascend_c/moe_gating_top_k_softmax/op_host/: moe_gating_top_k_softmax_def.cpp  moe_gating_top_k_softmax_infershape.cpp  moe_gating_top_k_softmax_tiling.cpp  moe_gating_top_k_softmax_tiling.h
csrc/ascend_c/moe_gating_top_k_softmax/op_kernel/: error_log.h  moe_gating_top_k_softmax.cpp  moe_gating_top_k_softmax.h
csrc/ascend_c/rms_norm/: CMakeLists.txt  README.md  build_rms_norm_ascend_c.py  compile_kernel.json  demo_rms_norm_accuracy.py  rms_norm_op.json  rms_norm_true_npu.cpp
csrc/ascend_c/rms_norm/op_host/: rms_norm_def.cpp  rms_norm_infershape.cpp  rms_norm_tiling.cpp  rms_norm_tiling.h
csrc/ascend_c/rms_norm/op_kernel/: rms_norm.cpp  rms_norm.h  rms_norm_impl.h
csrc/torch/: build_torch_custom.py  rms_norm_custom.cpp  rms_norm_custom_torch_ops.cpp
custom_op/: CMakeLists.txt  README.md  bench.py  build.py  build_ascendc.sh  rms_norm_ascendc_binding.cpp  rms_norm_custom.cpp  rms_norm_kernel.cpp
docs/: fused_infer_attention_and_tiling.md
docs/op_custom/rms_norm_custom/: RMSNorm_Implementation_Call_Summary.md
docs/op_custom/rms_norm_custom/ascend_c/: README.md  ascend_c_vs_pytorch_custom_ops.md  ascendc_custom_op_error_record.md
docs/op_custom/rms_norm_custom/torch/rms_norm_custorm/: README.md
docs/op_custom/rms_norm_custom/torch/rms_norm_custorm_lib/: README.md
docs/v1/: README.md
eval/: README.md  eval_longbench.py  requirements.txt
eval/metrics/: __init__.py  accuracy.py  performance.py
eval/utils/: __init__.py  data_loader.py  report_generator.py
example/: example.py  example_multimodal.py
log/: online_infer.txt
log/bench_log/: Qwen2-0.5B.txt
nanovllm/: __init__.py  config.py
nanovllm/custom_op/: rms_norm_custom_ascend_c.py  rms_norm_custom_legacy.py  rms_norm_custom_torch_ops.py
nanovllm/engine/: llm_engine.py  model_runner.py  sequence.py
nanovllm/layers/: attention.py  layernorm.py  rotary_embedding.py
nanovllm/models/: llama.py  mini_cpm4.py  models_map.py  qwen2_5_omni.py  qwen3.py  qwen3_moe.py  qwen3_vl.py
nanovllm/utils/: loader.py
nanovllm/v1/: __init__.py  run_api_server.py
nanovllm/v1/core/: __init__.py  outputs.py
nanovllm/v1/engine/: __init__.py  async_llm_engine.py
nanovllm/v1/entrypoints/openai/: __init__.py  api_server.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py
op_docs/: _atb_api_docs.py  _op_plugin_docs.py  custom_ops.py
test/: test_api.py  test_rms_norm_custom_lib.py  test_rms_norm_custom_torch_ops.py
